# ytdlp-khinsider

./: README.md  setup.cfg
yt_dlp_plugins/extractor/: khinsider.py
