[metadata]
name = yt-dlp_khinsider
version = 0.2.0

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe = False
install_requires =
    yt-dlp >= 2023.1.6
tests_require =
    ytdlp-plugins >= 2023.1.8

[options.packages.find]
exclude =
    test
    build.*
    venv.*


[build-system]
requires = 
    setuptools
    wheel


[bdist_wheel]
universal = False
